--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
                         <div class="caption">THEME</div>
                     </div>
                 </div>
-
+                <!-- mobile responsive logo -->
+                <div class="mobilelogo" style="display:none;">
+                    <img src="./assets/Title.png" alt="logo">
+                </div>
                 <!-- CHART SECTION, CHART IMAGE AND BOX -->
                 <div class="chartbox">
-                    <img src="./assets/ChartDesktop.png" alt>
+                    <img src="./assets/ChartDesktop.png" alt="logo" >
                 </div>
-
+                <!-- mobile chart -->
+                <div class="mobileChart" style="display:none;">
+                    <img src="./assets/ChartMobile.png" alt="chart">
+                </div>
                 <div class="freebutton">
                     <p>Learn forex trading for</p>
                     <div class="freebuttonimage align">
