--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>fx_lukya-home</title>
+        <title>fx lukya home</title>
 
         <link rel="stylesheet" href="./css/main.css">
     </head>
     <body>
 
         <section class="main">
+            <div class="menu" style="display: none;">
+                
+                <div class="menucenter">
+                    <div class="closebutton">
+                        <img src="./assets/CrossButton.png" alt="">
+                    </div>
+                    <div class="home">
+                        <img src="./assets/HomeLinkButton.png" alt="button">
+                    </div>
+                    <div class="blog">
+                        <img src="./assets/BlogLinkButton.png" alt="button">
+                    </div>
+                </div>
+
+            </div>
             <!--  HERO SECTION, HEADER SEC -->
             <div class="hero">
                 <div class="header">
@@ -37,7 +52,7 @@
                 </div>
                 <!-- CHART SECTION, CHART IMAGE AND BOX -->
                 <div class="chartbox">
-                    <img src="./assets/ChartDesktop.png" alt="logo" >
+                    <img src="./assets/ChartDesktop.png" alt="logo">
                 </div>
                 <!-- mobile chart -->
                 <div class="mobileChart" style="display:none;">
@@ -53,8 +68,7 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
+        <script src="./js/main.js"></script>
     </body>
 </html>
