--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
         <link rel="stylesheet" href="./css/main.css">
     </head>
     <body>
+        <main>
+            <section class="main">
+                <div class="menu" style="display: none;">
 
-        <section class="main">
-            <div class="menu" style="display: none;">
-                
-                <div class="menucenter">
-                    <div class="closebutton">
-                        <img src="./assets/CrossButton.png" alt="">
+                    <div class="menucenter">
+                        <div class="closebutton">
+                            <img src="./assets/CrossButton.png" alt>
+                        </div>
+                        <div class="home">
+                            <img src="./assets/HomeLinkButton.png" alt="button">
+                        </div>
+                        <div class="blog">
+                            <img src="./assets/BlogLinkButton.png" alt="button">
+                        </div>
                     </div>
-                    <div class="home">
-                        <img src="./assets/HomeLinkButton.png" alt="button">
-                    </div>
-                    <div class="blog">
-                        <img src="./assets/BlogLinkButton.png" alt="button">
-                    </div>
+
                 </div>
-
-            </div>
-            <!--  HERO SECTION, HEADER SEC -->
-            <div class="hero">
+                <!--  HERO SECTION, HEADER SEC -->
                 <div class="header">
                     <div class="menuButton button">
                         <div class="menuIcon icon"><img
@@ -48,10 +47,10 @@
                 </div>
                 <!-- mobile responsive logo -->
                 <div class="mobilelogo" style="display:none;">
-                    <img src="./assets/Title.png" alt="logo">
+                    <img style="margin-top: 70px!important;"  src="./assets/Title.png" alt="logo">
                 </div>
                 <!-- CHART SECTION, CHART IMAGE AND BOX -->
-                <div class="chartbox">
+                <div style="margin-top: 150px!important;" class="chartbox">
                     <img src="./assets/ChartDesktop.png" alt="logo">
                 </div>
                 <!-- mobile chart -->
@@ -67,8 +66,39 @@
                         <img src="./assets/BottomArrow.png" alt="button">
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+
+            <section class="CallToAction">
+                <div class="actionTitle">
+                    <h2>What to expect ?</h2>
+                </div>
+                <div class="banners">
+                    <div class="banner">
+                        <div class="bannerImage">
+                            <img src="./assets/DesktopCommunity.png" alt="community">
+                        </div>
+                        <p><span>Forex community</span> <br> <br>
+                          community filled with traders all over the world, with one purpose to share trading knowledge
+                        </p>
+                        <div class="button">
+                            <img src="./assets/MoreButton.png" alt="">
+                        </div>
+                    </div>
+                    <div class="banner">
+                        <div class="bannerImage">
+                            <img src="./assets/DesktopLessons.png" alt="community">
+                        </div>
+                        <p><span>Forex community</span> <br> <br>
+                          community filled with traders all over the world, with one purpose to share trading knowledge
+                        </p>
+                        <div class="button">
+                            <img src="./assets/MoreRedButton.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
         <script src="./js/main.js"></script>
     </body>
 </html>
