--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>fx lukya home</title>
-
+        <link rel="shortcut icon" href="./assets/MenuButton.png" type="image/x-icon">
         <link rel="stylesheet" href="./css/main.css">
     </head>
     <body>
