--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </section>
 
-            <section class="CallToAction">
+            <section class="CallToAction" style="margin-top: 50px;">
                 <div class="actionTitle">
                     <h2>What to expect ?</h2>
                 </div>
