--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         <div class="bannerImage">
                             <img src="./assets/DesktopLessons.png" alt="community">
                         </div>
-                        <p><span>Forex community</span> <br> <br>
-                          community filled with traders all over the world, with one purpose to share trading knowledge
+                        <p><span>Free Lessons</span> <br> <br>
+                          Free forex trading lessons to help beginners get an age in the market
                         </p>
                         <div class="button">
                             <img src="./assets/MoreRedButton.png" alt="">
