--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                     </div>
                 </div>
             </section>
+
+            <section></section>
         </main>
 
         <script src="./js/main.js"></script>
