video play back

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
 
             <section class="CallToAction" style="margin-top: 50px;">
-                <div class="actionTitle">
+                <div class="SubHeader">
                     <h2>What to expect ?</h2>
                 </div>
                 <div class="banners">
@@ -92,15 +92,44 @@
                           Free forex trading lessons to help beginners get an age in the market
                         </p>
                         <div class="button">
-                            <img src="./assets/MoreRedButton.png" alt="">
+                            <a href="#lessons">
+                                <img src="./assets/MoreRedButton.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section></section>
-        </main>
+            <section class="freeLessons" id="lessons">
+                <div class="lessonheader">
+                    <h2>Free forex lessons</h2>
+                </div>
 
+                <div class="lessonsContainer">
+                    <div class="lesson">
+                        <div class="caption">What is forex trading ?</div>
+                        <div class="video">
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/921858876?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="LiveVideoTest"></iframe></div>
+                        </div>
+                    </div>
+                    <div class="lesson">
+                        <div class="caption">What is forex trading ?</div>
+                        <div class="video">
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/921858876?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="LiveVideoTest"></iframe></div>
+                        </div>
+                    </div>
+                    <div class="lesson">
+                        <div class="caption">What is forex trading ?</div>
+                        <div class="video">
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/921858876?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="LiveVideoTest"></iframe></div>
+                        </div>
+                    </div>
+                </div>
+                
+            </section>
+        </main>
+       
         <script src="./js/main.js"></script>
+        <script src="https://player.vimeo.com/api/player.js"></script>
     </body>
 </html>
