--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
                         <div class="closebutton">
                             <img src="./assets/CrossButton.png" alt>
                         </div>
-                        <div class="home">
-                            <img src="./assets/HomeLinkButton.png" alt="button">
-                        </div>
-                        <div class="blog">
-                            <img src="./assets/BlogLinkButton.png" alt="button">
-                        </div>
+
+                        <a href="index.html">
+                            <div class="home">
+                                <img src="./assets/HomeLinkButton.png" alt="button">
+                            </div>
+                        </a>
+                        <a href="blog.html">
+                            <div class="blog">
+                                <img src="./assets/BlogLinkButton.png" alt="button">
+                            </div>
+                        </a>
+                       
                     </div>
 
                 </div>
@@ -69,6 +75,12 @@
             </section>
 
             <section class="CallToAction" style="margin-top: 50px;">
+                <div class="SubHeader" style="opacity: 0;">
+                    <h2>What to expect ?</h2>
+                </div>
+                <div class="SubHeader" style="opacity: 0;">
+                    <h2>What to expect ?</h2>
+                </div>
                 <div class="SubHeader">
                     <h2>What to expect ?</h2>
                 </div>
@@ -101,10 +113,15 @@
             </section>
 
             <section class="freeLessons" id="lessons">
+                <div class="lessonheader" style="opacity: 0;">
+                    <h2>Free forex lessons</h2>
+                </div>
+                <div class="lessonheader" style="opacity: 0;">
+                    <h2>Free forex lessons</h2>
+                </div>
                 <div class="lessonheader">
                     <h2>Free forex lessons</h2>
                 </div>
-
                 <div class="lessonsContainer">
                     <div class="lesson">
                         <div class="caption">What is forex trading ?</div>
