--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <div class="mobileChart" style="display:none;">
                     <img src="./assets/ChartMobile.png" alt="chart">
                 </div>
-                <div class="freebutton">
+                <a href="#lessons">
+                    <div class="freebutton">
                     <p>Learn forex trading for</p>
                     <div class="freebuttonimage align">
                         <img src="./assets/FreeButton.png" alt="button">
@@ -72,6 +73,8 @@
                         <img src="./assets/BottomArrow.png" alt="button">
                     </div>
                 </div>
+                </a>
+                
             </section>
 
             <section class="CallToAction" style="margin-top: 50px;">
