--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>fx lukya home</title>
+        <title>fx Lukya blogPage</title>
         <link rel="shortcut icon" href="./assets/MenuButton.png" type="image/x-icon">
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/blog.css">
@@ -88,8 +88,11 @@
                                 <div class="twitter"></div>
                                 <div class="youtube"></div>
                             </div>
+
                             <div class="BlogMoreButton">
-                                <img  src="./assets/blog/morebutton.png" alt="">
+                                <a href="./blogs/blog1.html">
+                                    <img  src="./assets/blog/morebutton.png" alt="">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -119,6 +122,13 @@
                     </div>
                 </div>
             </section>
+
+            <footer>
+                <div class="footHead">
+                    <img src="./assets/blog/Title.png" alt="logo">
+                    <p>Navigating the Forex Market with Confidance and Compansion: Fx Lukya Leads the Way</p>
+                </div>
+            </footer>
         </main>
        
         <script src="./js/main.js"></script>
