--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>fx lukya home</title>
+        <title>Fx Lukya home</title>
         <link rel="shortcut icon" href="./assets/MenuButton.png" type="image/x-icon">
         <link rel="stylesheet" href="./css/main.css">
     </head>
@@ -147,6 +147,13 @@
                 </div>
                 
             </section>
+
+            <footer>
+                <div class="footHead">
+                    <img src="./assets/blog/Title.png" alt="logo">
+                    <p>Navigating the Forex Market with Confidance and Compansion: <span>Fx Lukya Leads the Way</span></p>
+                </div>
+            </footer>
         </main>
        
         <script src="./js/main.js"></script>
