--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -15,7 +15,7 @@
                 <div class="menu" style="display: none;">
                     <div class="menucenter">
                         <div class="closebutton">
-                            <img src="./assets/CrossButton.png" alt>
+                            <img src="./assets/CrossButton.png" alt="button">
                         </div>
 
                         <a href="index.html">
