--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                         <div class="bannerImage">
                             <img src="./assets/DesktopCommunity.png" alt="community">
                         </div>
-                        <p><span>Forex community</span> <br> <br>
+                        <p><span>Forex Community</span> <br> <br>
                           community filled with traders all over the world, with one purpose to share trading knowledge
                         </p>
-                        <div class="button">
-                            <img src="./assets/MoreButton.png" alt="">
+                        <div class="button indev">
+                            <img src="./assets/MoreButton.png" alt="button">
                         </div>
                     </div>
                     <div class="banner">
@@ -115,6 +115,19 @@
                         </p>
                         <div class="button">
                             <a href="#lessons">
+                                <img src="./assets/MoreRedButton.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="banner">
+                        <div class="bannerImage">
+                            <img src="./assets/Blog.png" alt="community">
+                        </div>
+                        <p><span>Our Blog</span> <br> <br>
+                          We are going to be posting blogs every week, containing helpfull content that will shine a light n your forex journey
+                        </p>
+                        <div class="button">
+                            <a href="./blog.html">
                                 <img src="./assets/MoreRedButton.png" alt="">
                             </a>
                         </div>
