--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
                 <div class="menu" style="display: none;">
                     <div class="menucenter">
                         <div class="closebutton">
-                            <img src="./assets/CrossButton.png" alt>
+                            <img src="./assets/CrossButton.png" alt="button">
                         </div>
 
                         <a href="index.html">
@@ -87,21 +87,27 @@
                             <h1>Where and how to get started ?</h1>
                         </div>
                         <div class="catpion">
-                          there are plenty of places to go to, and one of them is here, we are here to simplify the world of forex for you 
+                          there are plenty of places to go to, and one of them is here, we are here to simplify the world of ... 
                         </div>
                         <div class="bottomsec">
                             <div class="socials">
-                                <a href="https://twitter.com/Fxlukya/status/1763939147822080063">
-                                    <div class="twitter"></div>
-                                </a>
-                                <a href="https://www.youtube.com/channel/UCkopVSVWhTFYCwqqWxYCdkQ">
-                                    <div class="youtube">
-                                </a>
+                                <div class="holder">
+                                    <a href="https://twitter.com/Fxlukya/status/1763939147822080063">
+                                        <div class="twitter"></div>
+                                    </a>
+                                </div>
+                                
+                                <div class="holder">
+                                    <a href="https://www.youtube.com/channel/UCkopVSVWhTFYCwqqWxYCdkQ">
+                                        <div class="youtube"></div>
+                                    </a>
+                                </div>
+                               
                             </div>
 
                             <div class="BlogMoreButton">
                                 <a href="./blogs/blog1.html">
-                                    <img  src="./assets/blog/morebutton.png" alt="">
+                                    <img  src="./assets/blog/morebutton.png" alt="button">
                                 </a>
                             </div>
                         </div>
@@ -117,7 +123,7 @@
                             <h1>What is forex trading ?</h1>
                         </div>
                         <div class="catpion">
-                          Forex trading, short for foreign exchange trading, involves the buying and selling of currencies on the foreign exchange market with the aim of making a profit from changes in exchange rates.
+                          Forex trading, short for foreign exchange trading, involves the buying and selling of currencies ....
                         </div>
                         <div class="bottomsec">
                             <div class="socials">
@@ -125,12 +131,12 @@
                                     <div class="twitter"></div>
                                 </a>
                                 <a href="https://www.youtube.com/channel/UCkopVSVWhTFYCwqqWxYCdkQ">
-                                    <div class="youtube">
+                                    <div class="youtube"></div>
                                 </a>
                             </div>
                             <div class="BlogMoreButton">
                                 <a href="./blogs/blog1.html">
-                                    <img  src="./assets/blog/morebutton.png" alt="">
+                                    <img  src="./assets/blog/morebutton.png" alt="button">
                                 </a>
                             </div>
                         </div>
