--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -15,17 +15,17 @@
                 <div class="menu" style="display: none;">
                     <div class="menucenter">
                         <div class="closebutton">
-                            <img src="./assets/CrossButton.png" alt="button">
+                            <img src="../assets/CrossButton.png" alt="button">
                         </div>
 
                         <a href="index.html">
                             <div class="home">
-                                <img src="./assets/HomeLinkButton.png" alt="button">
+                                <img src="../assets/HomeLinkButton.png" alt="button">
                             </div>
                         </a>
                         <a href="blog.html">
                             <div class="blog">
-                                <img src="./assets/BlogLinkButton.png" alt="button">
+                                <img src="../assets/BlogLinkButton.png" alt="button">
                             </div>
                         </a>
                         <div class="homeSocials socials">
