--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -64,7 +64,7 @@
                 <div class="blogTitle">
                     <h1>Where and how to get started ?</h1>
                     <div class="link">
-                        <div class="homelink"> <a href="index.html">Home</a></div>
+                        <div class="homelink"> <a href="../index.html">Home</a></div>
                         <div class="seprator">/</div>
                         <div class="blogLink"><a href="../blog.html">Blog</a></div>
                         <div class="seprator">/</div>
