Bug fix: blog page …

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -18,12 +18,12 @@
                             <img src="../assets/CrossButton.png" alt="button">
                         </div>
 
-                        <a href="index.html">
+                        <a href="../index.html">
                             <div class="home">
                                 <img src="../assets/HomeLinkButton.png" alt="button">
                             </div>
                         </a>
-                        <a href="blog.html">
+                        <a href="../blog.html">
                             <div class="blog">
                                 <img src="../assets/BlogLinkButton.png" alt="button">
                             </div>
